<resources>
    <string name="app_name">Project Run</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_data_to_server">DataToServer</string>
    <string name="title_activity_forgot_password_acitivty">ForgotPasswordAcitivty</string>
    <string name="title_activity_home_page">HomePageActivity</string>
    <string name="title_activity_search_results">SearchResultsActivity</string>
    <string name="title_activity_tester">Tester</string>
    <string name="title_activity_verification_page">VerificationPageActivity</string>
    <string name="title_activity_profile_viewer">ProfileViewerActivity</string>
    <string name="title_activity_user_profile">UserProfileActivity</string>
    <string name="title_activity_edit_user_profile">EditUserProfileActivity</string>
    <string name="title">Barry Chuckle</string>
    <string name="snippet">Computer Science</string>
    <string name="google_maps_key">AIzaSyCek0St1agCWLq_T4PSTJ9q_hcZAe8zhfE</string>
    <string name="google_app_id">project-run-1240</string>
    <string name="title_activity_friends_list">FriendsListActivity</string>

    <string name="username_label">Username:</string>
    <string name="login_title">Access Voice Chat</string>
    <string name="conference_id_label">Conference ID:</string>
    <string name="display_name_label">User_Name</string>
    <string name="join_title">Join</string>
    <string name="menu_settings">Settings</string>
    <string name="settings_base_url">Base URL:</string>
    <string name="app_id">App ID:</string>
    <string name="app_token">App Token:</string>
    <string name="log_level">SDK Log Level:</string>
    <string name="sdk_version">SDK Version:</string>
    <string name="authorizing">Authorizing</string>
    <string name="logging_in">Logging in</string>
    <string name="joining_av_chat">Joining AV chat</string>
    <string name="me">Me</string>
    <string name="front_camera">Front camera</string>
    <string name="back_camera">Back camera</string>
    <string name="mute_camera">Mute camera</string>
    <string name="change_camera">Change camera</string>
    <string name="resolution">Resolution</string>
    <string name="audio_routes">Audio Routes</string>
    <string name="filters">Filters</string>
    <string name="enter_session_id">Enter conference id</string>
    <string name="enter_display_name">Enter display name</string>
    <string name="enter_username">Enter username</string>
    <string name="enter_conference_id_and_display_name">Please enter conference id and display name</string>
    <string name="enter_username_toast">Please enter username</string>
    <string name="no_internet">No Internet Connection. Please check your internet connection or try again later.</string>
    <string name="enter_conference_id">Enter conference ID</string>
    <string name="wrong_conference_id">Conference ID is not valid</string>
    <string name="enter_conference_display_name">Please enter display name</string>
    <string name="session_id">Session ID</string>
    <string name="info_participants">Participants info</string>
    <string name="menu_information">Information</string>
    <string name="join_session">Join Session</string>
    <string name="display_name_too_long">Display name is too long</string>
    <string name="wrong_username_id">Username is not valid</string>
    <string name="video_cannot_be_viewed">Video cannot be viewed!</string>
    <string name="device_is_not_supported">Device is not supported!</string>
    <string name="start_call_title">Call</string>
    <string name="call_receiver_label">Call receiver Id:</string>
    <string name="enter_receiver_id">Enter receiver Id</string>
    <string name="enter_call_receiver">Enter call receiver</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="add_title">Add</string>
    <string name="call_receivers">Call receivers:</string>
    <string name="calling">Calling</string>
    <string name="answer">Answer</string>
    <string name="decline">Decline</string>
    <string name="no_receivers">Please add or enable up to 4 receivers!</string>
    <string name="room_title">Room</string>
    <string name="make_call_title">Make call</string>
    <string name="use_custom_render">Use custom video render</string>
    <string name="min_username_length">username must contain at least 6 characters</string>
	<string name="gcm_send_message">Token retrieved and sent to server! You can now use gcmsender to
        send downstream messages to this app.</string>
    <string name="registering_message">Generating InstanceID token...</string>
    <string name="token_error_message">An error occurred while either fetching the InstanceID token,
        sending the fetched token to the server or subscribing to the PubSub topic. Please try
        running the sample again.</string>
    <string name="push_title">Push</string>
    <string name="send_title">Send</string>
    <string name="enter_push_receiver">Enter push receiver</string>
    <string name="push_receivers">Push notification receivers:</string>
    <string name="enter_text_push">Enter text to push</string>
    <string name="all_receivers_offline">All receivers offline</string>
    <string name="fail_to_send_message">Sending of message fail</string>
    <string name="push_notification_sent">Push notification sent</string>
    <string name="push_notification_error">Error sending push notification</string>
    <string name="unknown">Unknown camera</string>
    <string name="unsubscribe_title">Unsubscribe</string>
    <string name="user_unsubscribed">User unsubscribed</string>
    <string name="user_unsubscribe_error">Error to unsubscribe</string>
    <string name="no_token_to_unsubscribe">There is no token to unsubscribe</string>
    <string name="characters_missing">Characters missing</string>
    <string name="user_offline">User %s is offline</string>
    <string name="title_activity_schedule_meeting">ScheduleMeetingActivity</string>
    <string name="title_activity_chat_room">ChatRoomActivity</string>
</resources>
